package com.skhatoll.backend.dto.partida;

public record FinPartidaDto(
    String bandoGanador,
    String mensaje
) {}
