package com.skhatoll.backend.dto.partida;

public record MuerteConfirmadaDto(
    String nombreJugador,
    String nombreRol,
    String bando
) {}
