package com.skhatoll.backend.dto.partida;

public record VotoDto(
    String nombreVotante,
    String nombreObjetivo
) {}
