package com.skhatoll.backend.util.constants;

public final class ErrorMessages {

    private ErrorMessages() {}

    public static final String SALA_NO_ENCONTRADA        = "Sala no encontrada";
    public static final String USUARIO_NO_ENCONTRADO     = "Usuario no encontrado";
    public static final String PARTIDA_NO_INICIADA       = "La partida no está en curso";
    public static final String VOTACION_YA_ABIERTA       = "Ya hay una votación abierta en esta sala";
    public static final String VOTACION_NO_ENCONTRADA    = "No hay ninguna votación abierta";
    public static final String SESION_YA_CERRADA         = "La sesión ya está cerrada";
    public static final String JUGADOR_NO_EN_SALA        = "No estás en esta sala";
    public static final String JUGADOR_ELIMINADO         = "Los jugadores eliminados no pueden votar";
    public static final String HABILIDAD_YA_USADA        = "Habilidad ya utilizada";
    public static final String SOLO_NARRADOR             = "Solo el narrador puede realizar esta acción";
}